@@ -5,6 +5,7 @@
  - Move code for imagemap() to Image::Keyboard::ImageMap::Tags.
  - Move code for check 'files_dir' parameter to image() method.
  - Rewrite Changes file to CPAN::Changes::SPEC format.
+ - Update Image::Keyboard doc to my standard.
  - Update Module::Install to 1.19 version.
  - Update author name.
  - Update author github username.
